Mobile Style Fixes
- centered Resume button
- removed extra header whitespace on mobile

--- a/mkv2/static/mkv2/styles.css
+++ b/mkv2/static/mkv2/styles.css
@@ -271,8 +271,8 @@ div.header p.tagline {
 	border: none;
 
 	margin-bottom: 5px;
-    margin-left: 25px;
-    text-decoration: none;
+  margin-top: -20px;
+  text-decoration: none;
 	background-color: #9FD87B;
 }
 #resume-btn:hover,
