--- a/mkv2/static/mkv2/styles_mobile.css
+++ b/mkv2/static/mkv2/styles_mobile.css
@@ -1,6 +1,10 @@
 
 @media only screen and (max-width: 760px) {
 	
+	#landing-div {
+		padding-top: 0vh;
+	}
+
 	div.header h1.header-name { 
 		font-size: 2em;
 	}
